@@ -7,8 +7,8 @@ catcher=xhamster.com
 ########################################################
 # Videos
 ########################################################
-item_infos=<img src='([^"]+jpg)'.+?<a href="(/movies/[^"]+)">(.+?)</a>.+?>Runtime: ((.+?))<
-item_order=icon|url|title|duration|title.append
+item_infos=<a href="([^"]+)" class='hRotator'>.+?img src='([^']+)'.+?alt="([^"]+)".+?Runtime:.(\d{1,2}m\d\ds)
+item_order=url|icon|title|title.append
 item_info_name=title.append
 item_info_build= (%s)
 item_info_name=type
