@@ -18,18 +18,11 @@ item_info_from=title.tmp
 item_info_build= (%s:
 item_url_build=http://www.youporn.com%s
 ########################################################
-#item_infos=<a href="(/watch/[^"]+)".*?><img .*?src="([^"]+)"[^>]+></a>[^<]+<p class="title"><a href="[^"]+">([^<]+)</a></p>
-#item_order=url|icon|title
-#item_info_name=type
-#item_info_build=video
-#item_url_build=http://www.youporn.com%s
-########################################################
 # Categories
 ########################################################
-item_infos=<li>[^<]+<div><a href="(/[^"]+)".*?>([^<]+)</a></div>
+item_infos=<li><a href="(/category/\d+/[^"]+/)">([^"]+)</a></li>
 item_order=url|title
 item_skill=directory
-item_curr=<li class="selected">[^<]+<div><a href="/[^"]+".*?>([^<]+)</a></div>
 item_info_name=title
 item_info_build=video.devil.locale|30100
 item_info_name=icon
@@ -37,6 +30,16 @@ item_info_build=video.devil.image|face_devil_grin.png
 item_url_build=http://www.youporn.com%s
 ########################################################
 # Subcategories
+########################################################
+item_infos=<li>[^<]+<div><a href="(/[^"]+)".*?>([^<]+)</a></div>
+item_order=url|title
+item_skill=directory
+item_curr=<li class="selected">[^<]+<div><a href="/[^"]+".*?>([^<]+)</a></div>
+item_info_name=title
+item_info_build=video.devil.locale|30109
+item_info_name=icon
+item_info_build=video.devil.image|face_kiss.png
+item_url_build=http://www.youporn.com%s
 ########################################################
 item_infos=<a href="(/browse/[^"]+)">([^<]+)</a>[^>]+</li>
 item_order=url|title
