@@ -1,3 +1,12 @@
+[B]Version 1.7.1[/B]
+
+- Added: madthumbs and pornoxo
+- Added: readded shufuni and girlfriendvideos
+- Updated: xhamster, redtube and youporn (categories)
+- Updated: search (keep last search string in memory)
+- Updated: striptoslash command
+
+
 [B]Version 1.7.0[/B]
 
 - Fixed: encoding problems for atv users (thx tiben20 and cipher_)
